# chess

./: .clang-format  CMakeLists.txt
cmake/: chess.sources  test.sources
include/: Board.hpp  ChessView.hpp  GameController.hpp  MoveGenerator.hpp  Pieces.hpp  RawMoveGenerator.hpp  ResourceManager.hpp
resources/shaders/board/: board.frag
src/: Board.cpp  ChessView.cpp  GameController.cpp  MoveGenerator.cpp  Pieces.cpp  RawMoveGenerator.cpp  ResourceManager.cpp  main.cpp
std_extensions/: literals.hpp
test/: BoardTest.cpp  MoveGeneratorTest.cpp  RawMoveGeneratorTest.cpp
